--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/angular": "^25.3.0",
-    "@ag-grid-community/client-side-row-model": "^25.3.0",
+    "@ag-grid-community/all-modules": "^26.0.0",
+    "@ag-grid-community/angular": "^26.0.0",
+    "@ag-grid-community/client-side-row-model": "^26.0.0",
+    "@ag-grid-community/core": "^26.0.0",
     "@angular/animations": "~12.1.0-",
     "@angular/common": "~12.1.0-",
     "@angular/compiler": "~12.1.0-",
