--- a/package.json
+++ b/package.json
@@ -20,45 +20,45 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/all-modules": "^26.0.0",
-    "@ag-grid-community/angular": "^26.0.0",
-    "@ag-grid-community/client-side-row-model": "^26.0.0",
-    "@ag-grid-community/core": "^26.0.0",
-    "@angular/animations": "~12.1.0-",
-    "@angular/common": "~12.1.0-",
-    "@angular/compiler": "~12.1.0-",
-    "@angular/core": "~12.1.0-",
-    "@angular/forms": "~12.1.0-",
-    "@angular/platform-browser": "~12.1.0-",
-    "@angular/platform-browser-dynamic": "~12.1.0-",
-    "@angular/router": "~12.1.0-",
-    "@datorama/akita": "^6.2.1",
-    "@datorama/akita-ng-router-store": "^6.0.1",
-    "@datorama/akita-ngdevtools": "^6.0.1",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@ag-grid-community/angular": "26.2",
+    "@ag-grid-community/client-side-row-model": "26.2",
+    "@angular/animations": "~13.2.0",
+    "@angular/cdk": "^13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/forms": "~13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
+    "@ant-design/icons-angular": "^13.0.2",
+    "@datorama/akita": "^7.1.1",
+    "@datorama/akita-ng-router-store": "^7.0.0",
+    "@datorama/akita-ngdevtools": "^7.0.0",
+    "@fortawesome/angular-fontawesome": "^0.10.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "monaco-editor": "^0.26.1",
-    "ng-zorro-antd": "^12.0.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
+    "ng-zorro-antd": "^13",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.3",
-    "@angular/cli": "~12.1.3",
-    "@angular/compiler-cli": "~12.1.0-",
-    "@types/jasmine": "~3.8.0",
+    "@angular-devkit/build-angular": "~13.2.0",
+    "@angular/cli": "~13.2.0",
+    "@angular/compiler-cli": "~13.2.0",
+    "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.8.0",
+    "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^12.1.0",
-    "typescript": "~4.3.2"
+    "ng-packagr": "^13.2.1",
+    "typescript": "~4.5.5"
   }
 }
