--- a/projects/doob-ng/core/package.json
+++ b/projects/doob-ng/core/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@doob-ng/core",
-  "version": "2.0.0",
+  "version": "3.2.1",
   "peerDependencies": {
-    "@angular/common": "^12.1.0-",
-    "@angular/core": "^12.1.0-"
+    "@angular/common": "13",
+    "@angular/core": "13"
   },
   "dependencies": {
     "tslib": "^2.2.0"
