--- a/projects/doob-ng/editor/package.json
+++ b/projects/doob-ng/editor/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@doob-ng/editor",
-  "version": "2.0.0",
+  "version": "3.1.0",
   "peerDependencies": {
-    "@angular/common": "^12.1.0-",
-    "@angular/core": "^12.1.0-",
-    "monaco-editor": "^0.26.1-"
+    "@angular/common": "13",
+    "@angular/core": "13",
+    "monaco-editor": "^0.26.1 - *"
   },
   "dependencies": {
     "tslib": "^2.2.0"
